--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,2 +1,326 @@
 @import "compass/reset";
 @import "compass/css3";
+
+@font-face {
+  font-family: 'icomoon';
+  src:url('fonts/icomoon.eot?pbrsmj');
+  src:url('fonts/icomoon.eot?#iefixpbrsmj') format('embedded-opentype'),
+  url('fonts/icomoon.woff?pbrsmj') format('woff'),
+  url('fonts/icomoon.ttf?pbrsmj') format('truetype'),
+  url('fonts/icomoon.svg?pbrsmj#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  font-size: 12px;
+  background: #323232;
+  color: white;
+}
+
+div {
+  border-radius: 3px;
+}
+
+header{
+  height: 27px;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.header-div {
+  margin-left: 93px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.header-seperator {
+  display: inline-block;
+  border-width: 10px;
+  background: rgba(104, 104, 104, 0.43);
+  width: 0.5px;
+  height: 10px;
+  margin-left: 7px;
+  margin-right: 6px
+}
+
+.search-input {
+  background: #5c5c5c;
+  color: #a4a4a4;
+  border: 0;
+  height: 15px;
+  padding-left: 4px;
+}
+
+.icon-search:before {
+  content: "\e986";
+  margin-left: -18px;
+  color: #a4a4a4;
+  font-size:8px
+
+}
+
+
+
+.slid-text {
+  text-align: center;
+  color: white;
+  margin-left: 2px;
+}
+
+.header-left-pic {
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+  margin-top: -2px;
+}
+
+.top-right {
+  float: right;
+  margin-right: 100px;
+  display: inline-block;
+}
+
+.upload-lable {
+  background-color: orange;
+  color: white;
+  width: 50px;
+  height: 16px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 16px;
+  font-size: 8px;
+}
+
+.head-right-img-div {
+  background-image: url(/images/hd-icn.svg);
+  display: inline-block;
+  background-color: orange;
+  background-size: 8px 8px;
+  background-position: 8px 4px;
+  background-repeat: no-repeat;
+  vertical-align: middle;
+  width: 24px;
+  height: 16px;
+  text-align: center;
+  content: "";
+}
+
+.head-right-img {
+  margin-top: 2px;
+  width: 13px;
+}
+
+nav {
+  background: #5c5c5c;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 83px;
+}
+
+nav span {
+  margin-left: 14px;
+  margin-right: 13px;
+  color: #d1d1d1;
+}
+
+.center-body {
+  background-image: url(/images/bg.jpg);
+  display: inline-block;
+  height: 483px;
+  width: 100vw;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  opacity: 0.9;
+  text-align: center;
+  color: white;
+}
+
+.center-body-pics {
+  background-image: url(/images/hills-browser-scr-1x.png);
+  width: 60%;
+  height: 320px;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+
+}
+
+.phone-pic {
+  background-image: url(/images/hills-mobile-scr-1x.png);
+  width: 90px;
+  height: 170px;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+  margin-top: 150px;
+  margin-left: -150px
+}
+
+.pad-pic {
+  background-image: url(/images/hills-tablet-scr-1x.png);
+  width: 190px;
+  height: 100px;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+  margin-top: 70px;
+  margin-left: 300px;
+  margin-right: -172px;
+}
+
+.center-in {
+  background-color: #0076B4;
+  display: inline-block;
+  line-height: 16px;
+  height: 16px;
+  width: 10%;
+
+  padding: 4px 4px 6px 5px;
+}
+
+.center-in:before {
+  background-image: url(/images/linkedin-logo-isolated.png);
+  width: 12px;
+  height: 12px;
+  background-size: 12px 12px;
+  background-position: 0px 0px;
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+  line-height: 20px;
+
+  margin-right: 5px;
+  margin-bottom: 2px;
+  vertical-align: middle;
+
+}
+
+.center-body-top {
+  margin-top: 30px;
+}
+
+.center-body-top p {
+  margin-bottom: 20px;
+}
+
+.first-line {
+  font-size: 30px;
+}
+
+.linkedin {
+  height: 15px;
+  width: 15px;
+  margin: 4px 0px -4px 9px
+
+}
+
+.create-now-center {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 10px 7px 8px 5px;
+}
+
+.center-thanks {
+  display: inline-block;
+  margin-left: 20px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: white;
+  vertical-align: middle;
+  height: 26px;
+  line-height: 26px;
+  width: 8%;
+}
+
+.bottome-first-line {
+  text-align: center;
+  margin-top: 20px;
+  line-height: 133%;
+}
+
+.bottom-seperator {
+  border-style: solid;
+  border-width: 0.8px;
+  border-color: #656565;
+  width: 25px;
+  margin: auto;
+  margin-top: 20px
+}
+
+.bottome-second-line {
+  text-align: center;
+  margin-top: 5px;
+}
+
+.bottom-detail {
+  font-size: 9px;
+  color: #909090;
+}
+
+.bottom-part {
+  display: inline-block;
+  margin: 11px 30px 20px 30px;
+
+}
+
+.bottom-last-line {
+  background-color: white;
+  width: 12%;
+  margin: auto;
+}
+
+.bottom-linkedin-div:before {
+  background-color: #0076B4;
+
+  background-image: url(/images/linkedin-logo-isolated.png);
+  background-size: 15px 15px;
+  background-position: 2px 2px;
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 2px 0px 1px 5px
+}
+
+.linkedin-pic-bottom {
+  height: 15px;
+  width: 15px;
+  margin: 1px 2px 0px 2px;
+}
+
+.create-now-bottom {
+  color: #0076B4;
+  vertical-align: super;
+  margin-left: 5px;
+  margin-right: 5px;
+
+}
+
+footer {
+  font-size: 8px;
+  color: #909090;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
