--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,4 @@
-/* line 5, ../../../.rbenv/versions/1.9.3-p484/lib/ruby/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,392 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../.rbenv/versions/1.9.3-p484/lib/ruby/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../.rbenv/versions/1.9.3-p484/lib/ruby/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../.rbenv/versions/1.9.3-p484/lib/ruby/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../.rbenv/versions/1.9.3-p484/lib/ruby/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../.rbenv/versions/1.9.3-p484/lib/ruby/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../.rbenv/versions/1.9.3-p484/lib/ruby/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../.rbenv/versions/1.9.3-p484/lib/ruby/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../.rbenv/versions/1.9.3-p484/lib/ruby/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../.rvm/gems/ruby-2.0.0-p481/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
+}
+
+@font-face {
+  font-family: 'icomoon';
+  src: url("fonts/icomoon.eot?pbrsmj");
+  src: url("fonts/icomoon.eot?#iefixpbrsmj") format("embedded-opentype"), url("fonts/icomoon.woff?pbrsmj") format("woff"), url("fonts/icomoon.ttf?pbrsmj") format("truetype"), url("fonts/icomoon.svg?pbrsmj#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+/* line 15, ../sass/style.scss */
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* line 29, ../sass/style.scss */
+body {
+  font-size: 12px;
+  background: #323232;
+  color: white;
+}
+
+/* line 35, ../sass/style.scss */
+div {
+  border-radius: 3px;
+}
+
+/* line 39, ../sass/style.scss */
+header {
+  height: 27px;
+}
+
+/* line 43, ../sass/style.scss */
+.inline-block {
+  display: inline-block;
+}
+
+/* line 47, ../sass/style.scss */
+.header-div {
+  margin-left: 93px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+/* line 53, ../sass/style.scss */
+.header-seperator {
+  display: inline-block;
+  border-width: 10px;
+  background: rgba(104, 104, 104, 0.43);
+  width: 0.5px;
+  height: 10px;
+  margin-left: 7px;
+  margin-right: 6px;
+}
+
+/* line 63, ../sass/style.scss */
+.search-input {
+  background: #5c5c5c;
+  color: #a4a4a4;
+  border: 0;
+  height: 15px;
+  padding-left: 4px;
+}
+
+/* line 71, ../sass/style.scss */
+.icon-search:before {
+  content: "\e986";
+  margin-left: -18px;
+  color: #a4a4a4;
+  font-size: 8px;
+}
+
+/* line 81, ../sass/style.scss */
+.slid-text {
+  text-align: center;
+  color: white;
+  margin-left: 2px;
+}
+
+/* line 87, ../sass/style.scss */
+.header-left-pic {
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+  margin-top: -2px;
+}
+
+/* line 94, ../sass/style.scss */
+.top-right {
+  float: right;
+  margin-right: 100px;
+  display: inline-block;
+}
+
+/* line 100, ../sass/style.scss */
+.upload-lable {
+  background-color: orange;
+  color: white;
+  width: 50px;
+  height: 16px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 16px;
+  font-size: 8px;
+}
+
+/* line 111, ../sass/style.scss */
+.head-right-img-div {
+  background-image: url(/images/hd-icn.svg);
+  display: inline-block;
+  background-color: orange;
+  background-size: 8px 8px;
+  background-position: 8px 4px;
+  background-repeat: no-repeat;
+  vertical-align: middle;
+  width: 24px;
+  height: 16px;
+  text-align: center;
+  content: "";
+}
+
+/* line 125, ../sass/style.scss */
+.head-right-img {
+  margin-top: 2px;
+  width: 13px;
+}
+
+/* line 130, ../sass/style.scss */
+nav {
+  background: #5c5c5c;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 83px;
+}
+
+/* line 137, ../sass/style.scss */
+nav span {
+  margin-left: 14px;
+  margin-right: 13px;
+  color: #d1d1d1;
+}
+
+/* line 143, ../sass/style.scss */
+.center-body {
+  background-image: url(/images/bg.jpg);
+  display: inline-block;
+  height: 483px;
+  width: 100vw;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  opacity: 0.9;
+  text-align: center;
+  color: white;
+}
+
+/* line 155, ../sass/style.scss */
+.center-body-pics {
+  background-image: url(/images/hills-browser-scr-1x.png);
+  width: 60%;
+  height: 320px;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+}
+
+/* line 166, ../sass/style.scss */
+.phone-pic {
+  background-image: url(/images/hills-mobile-scr-1x.png);
+  width: 90px;
+  height: 170px;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+  margin-top: 150px;
+  margin-left: -150px;
+}
+
+/* line 178, ../sass/style.scss */
+.pad-pic {
+  background-image: url(/images/hills-tablet-scr-1x.png);
+  width: 190px;
+  height: 100px;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+  margin-top: 70px;
+  margin-left: 300px;
+  margin-right: -172px;
+}
+
+/* line 191, ../sass/style.scss */
+.center-in {
+  background-color: #0076B4;
+  display: inline-block;
+  line-height: 16px;
+  height: 16px;
+  width: 10%;
+  padding: 4px 4px 6px 5px;
+}
+
+/* line 201, ../sass/style.scss */
+.center-in:before {
+  background-image: url(/images/linkedin-logo-isolated.png);
+  width: 12px;
+  height: 12px;
+  background-size: 12px 12px;
+  background-position: 0px 0px;
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+  line-height: 20px;
+  margin-right: 5px;
+  margin-bottom: 2px;
+  vertical-align: middle;
+}
+
+/* line 218, ../sass/style.scss */
+.center-body-top {
+  margin-top: 30px;
+}
+
+/* line 222, ../sass/style.scss */
+.center-body-top p {
+  margin-bottom: 20px;
+}
+
+/* line 226, ../sass/style.scss */
+.first-line {
+  font-size: 30px;
+}
+
+/* line 230, ../sass/style.scss */
+.linkedin {
+  height: 15px;
+  width: 15px;
+  margin: 4px 0px -4px 9px;
+}
+
+/* line 237, ../sass/style.scss */
+.create-now-center {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 10px 7px 8px 5px;
+}
+
+/* line 243, ../sass/style.scss */
+.center-thanks {
+  display: inline-block;
+  margin-left: 20px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: white;
+  vertical-align: middle;
+  height: 26px;
+  line-height: 26px;
+  width: 8%;
+}
+
+/* line 255, ../sass/style.scss */
+.bottome-first-line {
+  text-align: center;
+  margin-top: 20px;
+  line-height: 133%;
+}
+
+/* line 261, ../sass/style.scss */
+.bottom-seperator {
+  border-style: solid;
+  border-width: 0.8px;
+  border-color: #656565;
+  width: 25px;
+  margin: auto;
+  margin-top: 20px;
+}
+
+/* line 270, ../sass/style.scss */
+.bottome-second-line {
+  text-align: center;
+  margin-top: 5px;
+}
+
+/* line 275, ../sass/style.scss */
+.bottom-detail {
+  font-size: 9px;
+  color: #909090;
+}
+
+/* line 280, ../sass/style.scss */
+.bottom-part {
+  display: inline-block;
+  margin: 11px 30px 20px 30px;
+}
+
+/* line 286, ../sass/style.scss */
+.bottom-last-line {
+  background-color: white;
+  width: 12%;
+  margin: auto;
+}
+
+/* line 292, ../sass/style.scss */
+.bottom-linkedin-div:before {
+  background-color: #0076B4;
+  background-image: url(/images/linkedin-logo-isolated.png);
+  background-size: 15px 15px;
+  background-position: 2px 2px;
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 2px 0px 1px 5px;
+}
+
+/* line 306, ../sass/style.scss */
+.linkedin-pic-bottom {
+  height: 15px;
+  width: 15px;
+  margin: 1px 2px 0px 2px;
+}
+
+/* line 312, ../sass/style.scss */
+.create-now-bottom {
+  color: #0076B4;
+  vertical-align: super;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+/* line 320, ../sass/style.scss */
+footer {
+  font-size: 8px;
+  color: #909090;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 15px;
 }
