--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,8 +3,8 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:url('fonts/icomoon.eot?pbrsmj');
-  src:url('fonts/icomoon.eot?#iefixpbrsmj') format('embedded-opentype'),
+  src: url('fonts/icomoon.eot?pbrsmj');
+  src: url('fonts/icomoon.eot?#iefixpbrsmj') format('embedded-opentype'),
   url('fonts/icomoon.woff?pbrsmj') format('woff'),
   url('fonts/icomoon.ttf?pbrsmj') format('truetype'),
   url('fonts/icomoon.svg?pbrsmj#icomoon') format('svg');
@@ -27,95 +27,113 @@
 }
 
 body {
-  font-size: 12px;
+  font-size: 18px;
   background: #323232;
   color: white;
-}
-
-div {
-  border-radius: 3px;
-}
-
-header:after{
-
-  content:'';
-display: block;
-clear: both;
 }
 
 .inline-block {
   display: inline-block;
 }
 
-.logo {
-  width: 20px;
-  height: 20px;
-  vertical-align: middle;
-  margin-left:10%;
-  margin-right:2%;
-  margin-top: 0.6%;
-  margin-bottom: 0.6%;
+div {
+  border-radius: 3px;
 }
 
+button {
+  border: aliceblue;
+  border-radius: 3px;
+}
+
+.top:after {
+
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.logo {
+  width: 30px;
+  height: 30px;
+  vertical-align: middle;
+  margin-left: 10%;
+  margin-right: 1%;
+
+}
+
+.seperator {
+  border-width: 1px;
+  border-color: #5c5c5c;
+  height: 12px;
+  border-style: solid;
+  vertical-align: middle;
+  margin-left: 1%;
+
+}
+
+.top-left {
+  float: left;
+  display: inline-block;
+  width: 50%;
+  margin-top: 0.5%;
+  margin-bottom: 0.5%;
+  margin-left: 5%;
+}
 
 .search-input {
   background: #5c5c5c;
-  color: #a4a4a4;
+  color: #b6b6b6;;
   border: 0;
   height: 20px;
+  width: 25%;
   margin-left: 1%;
   padding-left: 0.5%;
-  margin-top: 1.1%;
+  margin-top: 0.6%;
 }
 
 .icon-search:before {
   content: "\e986";
   margin-left: -18px;
   color: #a4a4a4;
-  font-size:8px
+  font-size: 8px
 
 }
-.top-left{
-  float: left;
-  display: inline-block;
-  width: 50%;
-  margin-top: 0.5%;
+
+.top-right {
+  float: right;
+  width: 25%;
+  margin-top: 0.85%;
   margin-bottom: 0.5%;
 }
-.top-right{
-  float: right;
-  width: 20%;
-  margin-top: 0.8%;
 
-}
-.top_button{
+.head-right-but1 {
   background-color: orange;
   color: white;
-  height: 20px;
+  height: 24px;
+  width: 54px;
   margin-top: 0.6%;
-  border: aliceblue
+  border: aliceblue;
+  border-radius: 3px;
 
 }
 
-.head-right-img-div {
-  background-image: url(/images/hd-icn.svg);
-  display: inline-block;
+.head-right-but2 {
+  background-image: url(../images/hd-icn.svg);
   background-color: orange;
-  /* background-size: 86% 64%; */
-  background-position: 50% 23%;
+  background-size: 53%;
+  background-position: 46% 44%;
   background-repeat: no-repeat;
   vertical-align: middle;
-  width: 20%;
-  height: 20px;
-  text-align: center;
-  content: "";
-  margin-right: 10%;
-  margin-left: 1%;
+  width: 30px;
+  height: 24px;
+  margin-top: 2px
 }
 
-.head-right-img {
-  margin-top: 2px;
-  width: 13px;
+.header-pic {
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+  margin-left: 3%;
 }
 
 nav {
@@ -125,16 +143,29 @@ nav {
   padding-left: 83px;
 }
 
-nav span {
-  margin-left: 14px;
-  margin-right: 13px;
-  color: #d1d1d1;
+nav ul {
+  margin-left: 4.5%;
 }
 
-.center-body {
-  background-image: url(/images/bg.jpg);
+nav ul li {
+  float: left;
+  margin-right: 5%;
+}
+
+a {
+  color: #b6b6b6;
+  text-decoration: none;
+}
+
+ul:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.main {
+  background-image: url(../images/bg.jpg);
   display: inline-block;
-  height: 50%;
   width: 100%;
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -143,36 +174,40 @@ nav span {
   color: white;
 }
 
+.main-top p {
+  margin-bottom: 1%;
+}
+
 .center-body-pics {
-  background-image: url(/images/hills-browser-scr-1x.png);
-  width: 60%;
-  height: 320px;
+  background-image: url(../images/hills-browser-scr-1x.png);
+  width: 70%;
+  height: 450px;
   background-size: 100% 100%;
   background-repeat: no-repeat;
   content: "";
   display: inline-block;
-  position:relative;
+  position: relative;
 
 }
 
 .phone-pic {
-  background-image: url(/images/hills-mobile-scr-1x.png);
-  width: 20%;
+  background-image: url("../images/hills-mobile-scr-1x.png");
+  width: 16%;
   height: 50%;
   background-size: 100% 100%;
   background-repeat: no-repeat;
   content: "";
   display: inline-block;
   position: absolute;
-  left: -9%;
+  left: -8%;
   bottom: 0%
 
 }
 
 .pad-pic {
-  background-image: url(/images/hills-tablet-scr-1x.png);
+  background-image: url(../images/hills-tablet-scr-1x.png);
   width: 35%;
-  height: 28.5%;
+  height: 30%;
   background-size: 100% 100%;
   background-repeat: no-repeat;
   content: "";
@@ -182,34 +217,40 @@ nav span {
   right: -15%;
 }
 
-.center-in {
-  background-color: #0076B4;
-  display: inline-block;
-  line-height: 16px;
-  height: 16px;
-  width: 10%;
-
-  padding: 4px 4px 6px 5px;
+.main-buttons {
+  margin-top: 2%;
+  margin-bottom: 4%;
 }
 
-.center-in:before {
-  background-image: url(/images/linkedin-logo-isolated.png);
-  width: 12px;
-  height: 12px;
-  background-size: 12px 12px;
-  background-position: 0px 0px;
+.main-but1 {
+  background-image: url(../images/linkedin-logo-isolated.png);
+  background-size: 24px;
   background-repeat: no-repeat;
-  content: "";
-  display: inline-block;
-  line-height: 20px;
-
-  margin-right: 5px;
-  margin-bottom: 2px;
-  vertical-align: middle;
-
+  background-position: 8px 8px;
+  background-color: #0076B4;
+  height: 40px;
+  line-height: 40px;
+  color: white;
 }
 
-.center-body-top {
+.main-but1-content {
+  margin-left: 40px;
+  margin-right: 4px;
+}
+
+.main-but2 {
+  display: inline-block;
+  margin-left: 20px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: white;
+  height: 40px;
+  width: 80px;
+  background-color: transparent;
+  color: white;
+}
+
+.main-top {
   margin-top: 30px;
 }
 
@@ -234,52 +275,52 @@ nav span {
   padding: 10px 7px 8px 5px;
 }
 
-.center-thanks {
-  display: inline-block;
-  margin-left: 20px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: white;
-  vertical-align: middle;
-  height: 26px;
-  line-height: 26px;
-  width: 8%;
-}
-
-.bottome-first-line {
+.footer p {
   text-align: center;
   margin-top: 20px;
   line-height: 133%;
+  margin-bottom: 3%;
+
 }
 
 .bottom-seperator {
+  border-color: #909090;
   border-style: solid;
-  border-width: 0.8px;
-  border-color: #656565;
-  width: 25px;
+  border-bottom-width: 1px;
+  width: 5%;
   margin: auto;
-  margin-top: 20px
 }
 
-.bottome-second-line {
+.footer-list li {
+  float: left;
   text-align: center;
-  margin-top: 5px;
+  margin-left: 12%;
+
+}
+
+.footer-line-sep {
+  color: #9b9b9b;
+  line-height: 88px;
+  height: 88px;
+  font-size: 42px;
+  margin-left: 5%;
+  opacity: 0.5;
+}
+
+.footer-list {
+  margin-bottom: 2%;
+  margin-top: 2%;
 }
 
 .bottom-detail {
-  font-size: 9px;
+  font-size: 15px;
   color: #909090;
+  margin-top: 1%;
 }
 
-.bottom-part {
-  display: inline-block;
-  margin: 11px 30px 20px 30px;
-
-}
-
-.bottom-last-line {
+.footer-button {
   background-color: white;
-  width: 100px;
+  width: 140px;
   margin: auto;
   height: 34px;
   line-height: 34px;
@@ -288,7 +329,7 @@ nav span {
 
 .bottom-linkedin-div {
   background-color: #0076B4;
-  background-image: url(/images/linkedin-logo-isolated.png);
+  background-image: url(../images/linkedin-logo-isolated.png);
   background-size: 18px 18px;
   background-position: 3px 3px;
   background-repeat: no-repeat;
